finish the project with a few bugs and waiting fix

--- a/.jshintrc
+++ b/.jshintrc
@@ -17,7 +17,7 @@
   "unused": false,
   "strict": true,
   "trailing": true,
-  "smarttabs": true,
+  /*"smarttabs": true,*/
   "white": true,
   "newcap": false,
   "globals": {
